--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,33 +60,34 @@
 :root {
     --radius: 0.625rem;
 
-    --scrollbar-color: oklch(0.885 0 0) var(--background);
+    --scrollbar-color: oklch(0.85 0.04 260) var(--background);
 
-    --background: oklch(1 0 0);
-    --foreground: oklch(0.145 0 0);
+    --background: oklch(0.85 0.04 260);
+    --foreground: oklch(0.38 0 260);
 
-    --card: oklch(1 0 0);
-    --card-foreground: oklch(0.145 0 0);
+    --card: oklch(0.9 0.02 260);
+    --card-foreground: oklch(0.38 0 260);
 
-    --popover: oklch(1 0 0);
-    --popover-foreground: oklch(0.145 0 0);
+    --popover: oklch(0.9 0.02 260);
+    --popover-foreground: oklch(0.38 0 260);
 
-    --primary: oklch(0.205 0 0);
-    --primary-foreground: oklch(0.985 0 0);
+    --primary: oklch(0.4 0.12 260);
+    --primary-foreground: oklch(0.96 0 260);
 
-    --secondary: oklch(0.97 0 0);
-    --secondary-foreground: oklch(0.205 0 0);
+    --secondary: oklch(0.8 0.03 260);
+    --secondary-foreground: oklch(0.38 0 260);
 
-    --muted: oklch(0.97 0 0);
-    --muted-foreground: oklch(0.556 0 0);
+    --muted: oklch(0.75 0.01 260);
+    --muted-foreground: oklch(0.5 0 260);
 
-    --accent: oklch(0.97 0 0);
-    --accent-foreground: oklch(0.205 0 0);
+    --accent: oklch(0.85 0.07 260);
+    --accent-foreground: oklch(0.38 0 260);
 
     --destructive: oklch(0.577 0.245 27.325);
-    --border: oklch(0.922 0 0);
-    --input: oklch(0.922 0 0);
-    --ring: oklch(0.708 0 0);
+
+    --border: oklch(0.65 0.01 260);
+    --input: oklch(0.88 0.01 260);
+    --ring: oklch(0.48 0 260);
 
     --chart-1: oklch(0.646 0.222 41.116);
     --chart-2: oklch(0.6 0.118 184.704);
@@ -94,44 +95,44 @@
     --chart-4: oklch(0.828 0.189 84.429);
     --chart-5: oklch(0.769 0.188 70.08);
 
-    --sidebar: oklch(0.985 0 0);
-    --sidebar-foreground: oklch(0.145 0 0);
-    --sidebar-primary: oklch(0.205 0 0);
-    --sidebar-primary-foreground: oklch(0.985 0 0);
-    --sidebar-accent: oklch(0.97 0 0);
-    --sidebar-accent-foreground: oklch(0.205 0 0);
-    --sidebar-border: oklch(0.922 0 0);
-    --sidebar-ring: oklch(0.708 0 0);
+    --sidebar: oklch(0.85 0.04 260);
+    --sidebar-foreground: oklch(0.38 0 260);
+    --sidebar-primary: oklch(0.4 0.12 260);
+    --sidebar-primary-foreground: oklch(0.96 0 260);
+    --sidebar-accent: oklch(0.85 0.07 260);
+    --sidebar-accent-foreground: oklch(0.38 0 260);
+    --sidebar-border: oklch(0.65 0.01 260);
+    --sidebar-ring: oklch(0.48 0 260);
 }
 
 .dark {
     --scrollbar-color: var(--accent) var(--background);
 
-    --background: oklch(0.145 0 0);
-    --foreground: oklch(0.985 0 0);
+    --background: oklch(0.03 0.005 240);
+    --foreground: oklch(0.85 0.02 240);
 
-    --card: oklch(0.205 0 0);
-    --card-foreground: oklch(0.985 0 0);
+    --card: oklch(0.05 0.02 240);
+    --card-foreground: oklch(0.65 0.02 240);
 
-    --popover: oklch(0.205 0 0);
-    --popover-foreground: oklch(0.985 0 0);
+    --popover: oklch(0.06 0.03 240);
+    --popover-foreground: oklch(0.70 0.02 240);
 
-    --primary: oklch(0.922 0 0);
-    --primary-foreground: oklch(0.205 0 0);
+    --primary: oklch(0.28 0.12 245);
+    --primary-foreground: oklch(0.05 0.01 245);
 
-    --secondary: oklch(0.269 0 0);
-    --secondary-foreground: oklch(0.985 0 0);
+    --secondary: oklch(0.08 0.03 220);
+    --secondary-foreground: oklch(0.50 0.01 220);
 
-    --muted: oklch(0.269 0 0);
-    --muted-foreground: oklch(0.708 0 0);
+    --muted: oklch(0.07 0.015 240);
+    --muted-foreground: oklch(0.642 0.036 241.384);
 
-    --accent: oklch(0.269 0 0);
-    --accent-foreground: oklch(0.985 0 0);
+    --accent: oklch(0.30 0.10 240);
+    --accent-foreground: oklch(0.04 0.01 240);
 
-    --destructive: oklch(0.704 0.191 22.216);
-    --border: oklch(1 0 0 / 10%);
-    --input: oklch(1 0 0 / 15%);
-    --ring: oklch(0.556 0 0);
+    --destructive: oklch(0.25 0.10 20);
+    --border: oklch(0.06 0.02 240 / 12%);
+    --input: oklch(0.07 0.02 240 / 10%);
+    --ring: oklch(0.18 0.03 240);
 
     --chart-1: oklch(0.488 0.243 264.376);
     --chart-2: oklch(0.696 0.17 162.48);
@@ -139,14 +140,50 @@
     --chart-4: oklch(0.627 0.265 303.9);
     --chart-5: oklch(0.645 0.246 16.439);
 
-    --sidebar: oklch(0.205 0 0);
-    --sidebar-foreground: oklch(0.985 0 0);
-    --sidebar-primary: oklch(0.488 0.243 264.376);
-    --sidebar-primary-foreground: oklch(0.985 0 0);
-    --sidebar-accent: oklch(0.269 0 0);
-    --sidebar-accent-foreground: oklch(0.985 0 0);
-    --sidebar-border: oklch(1 0 0 / 10%);
-    --sidebar-ring: oklch(0.556 0 0);
+    --sidebar: oklch(0.05 0.01 240);
+    --sidebar-foreground: oklch(0.85 0.02 240);
+    --sidebar-primary: oklch(0.55 0.15 245);
+    --sidebar-primary-foreground: oklch(0.85 0.02 240);
+    --sidebar-accent: oklch(0.30 0.10 240);
+    --sidebar-accent-foreground: oklch(0.04 0.01 240);
+    --sidebar-border: oklch(0.06 0.02 240 / 12%);
+    --sidebar-ring: oklch(0.18 0.03 240);
+}
+
+@layer utilities {
+    .text-outline {
+        color: transparent;
+        -webkit-text-stroke: 1px var(--foreground);
+        transition: color 0.3s ease-in-out;
+    }
+
+    .emoji {
+        will-change: transform, opacity;
+    }
+
+    .bg-parted:after {
+        content: "";
+        position: absolute;
+        width: 60%;
+        height: 100%;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: var(--accent);
+        z-index: -1;
+    }
+
+    @media (hover: hover) {
+        .text-outline:hover {
+            color: var(--foreground);
+        }
+    }
+
+    @media (hover: none) {
+        .text-outline:active {
+            color: var(--foreground);
+        }
+    }
 }
 
 @layer base {
